<resources>
    <string name="app_name">智能监管平台</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="seting_btn">去配置</string>
    <string name="adress">地址:</string>
    <string name="daress_hint">请输入地址</string>
    <string name="port">端口:</string>
    <string name="port_hint">请输入端口</string>
    <string name="platform_seting">平台配置</string>
    <string name="save_btn">保存</string>
    <string name="realtime_preview">实时预览</string>
    <string name="remote_playback">远程回放</string>
    <string name="select_monitoringpoint">选择监控点</string>
    <string name="video">视频</string>
    <string name="image_management">图像管理</string>
    <string name="message">消息</string>
    <string name="my">运维管理</string>
    <string name="video_snapshot">视频截图</string>
    <string name="local_video">本地录像</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="username">admin</string>

    <string name="main_url_hint">服务器地址(https://10.33.31.200:443)</string>
    <string name="http_et">http://</string>
    <string name="https_et">https://</string>
    <string name="url_et">222.66.82.4</string>
    <string name="port_et">80</string>
    <string name="video_url_et">222.66.82.2</string>
    <string name="video_port_et">443</string>


    <string name="main_user_name_hint">用户名</string>
    <string name="main_psd_hint">密码</string>
    <string name="main_login">登陆</string>
    <string name="main_logout">退出</string>
    <string name="empty_tip">不能为空</string>
    <string name="have_not_login">没有登录</string>
    <string name="login_process_tip">登录中&#8230;</string>
    <string name="logout_process_tip">退出中&#8230;</string>
    <string name="login_failed">登录失败</string>
    <string name="logout_success">退出成功</string>
    <string name="logout_failed">退出失败</string>
    <string name="login_success">登录成功</string>
    <string name="empty">数据为空</string>
    <string name="loading_process_tip">加载中&#8230;</string>
    <string name="loading_success">加载成功</string>
    <string name="loading_failed">加载失败</string>
    <string name="get_root_control_center_error">获取根节点出错</string>
    <string name="get_sub_resource_list_error">获取次级资源列表出错</string>
    <string name="no_permission">没有权限</string>
    <string name="loading_camera_info">加载监控详细信息</string>
    <string name="loading_camera_info_failure">加载监控点详细信息失败</string>
    <string name="loading_device_info">加载设备信息</string>
    <string name="loading_device_info_failure">加载设备信息失败</string>
    <string name="loading_play_url">加载播放地址</string>
    <string name="loading_play_url_failure">加载播放地址失败</string>
    <string name="live_start_play">播放</string>
    <string name="live_stop_play">停止</string>
    <string name="live_capture">抓拍</string>
    <string name="rtsp_success">启动取流成功</string>
    <string name="rtsp_fail">RTSP链接失败</string>
    <string name="live_stop_success">停止成功</string>
    <string name="start_open_failed">开启播放库失败</string>
    <string name="play_display_success">播放成功</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_seting">SetingActivity</string>

    <string name="renlianshibie_kaoqin">人脸识别考勤</string>
    <string name="helmet_identification">安全帽识别</string>
    <string name="qx_title">气象</string>
    <string name="renlianshibie_kaoqin_detail">考勤详细</string>
    <string name="shexiangji_tongji">摄像机在线率统计</string>
    <string name="shexiangji_huizong">摄像机实时在线汇总</string>
    <string name="weather_lay">气象</string>
    <string name="isjieshouxiaoxi">是否接收消息</string>
    <string name="outapp">注销登录</string>
    <string-array name="camera_select_items">
        <item>预览</item>
        <item>回放</item>
    </string-array>
    <string name="rule_text">0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>

    <string name="video_screenshot">视频截图</string>
    <string name="video_video">本地录像</string>
    <string name="video_del">删除</string>
    <string name="video_share">分享</string>
    <string name="yewu_seting">业务系统配置</string>
    <string name="video_seting">视频后台配置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_choose_one">只能选择一个文件哦！</string>
    <string name="tj_select">筛选条件</string>
    <string name="kq_list">考勤列表</string>
    <string name="sb_list">识别列表</string>
    <string name="qx_list">气象列表</string>

    <string name="palase_select">请选择..</string>
    <string name="xl_select">线路：</string>
    <string name="zd_select">站点：</string>
    <string name="time_select">时间：</string>
    <string name="type_txt">类型：</string>
    <string name="keyword_select">关键字：</string>
    <string name="keyword_ex">如：姓名</string>
    <string name="notarize_search">确认查询</string>
    <string name="gonghao_txt">工号：</string>
    <string name="name_txt">姓名：</string>
    <string name="sex_txt">性别：</string>
    <string name="dw_txt">单位：</string>
    <string name="bm_txt">职务：</string>
    <string name="phone_txt">电话：</string>
    <string name="rq_txt">第一次打卡时间：</string>
    <string name="after_rq_txt">第二次打卡时间：</string>
    <string name="three_txt">第三次打卡时间：</string>
    <string name="your_select">您已经选择了</string>
    <string name="plase_xl">请先选择线路</string>

    <string name="sure_log_out">确定退出系统吗？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="online_number">在线数量:&#160;&#160;&#160;</string>
    <string name="offline_number">\n离线数量:&#160;&#160;&#160;</string>
    <string name="xl_toast">线路不能为空</string>
    <string name="time_toast">时间不能为空</string>
    <string name="message_safety_hat">安全帽</string>
    <string name="message_face">人脸</string>


    <string name="type_toast">类型不能为空</string>
    <string name="video_ing">正在录像..</string>
    <string name="table">表  格</string>
    <string name="line">折线图</string>
    <string name="viewpager_indicator">第几</string>
    <string name="capture_success">抓拍成功</string>
    <string name="capture_fail">抓拍失败</string>
    <string name="sd_card_fail">SD卡不可用</string>
    <string name="sd_card_not_enough">SD卡空间不足</string>
    <string name="start_record_success">启动录像成功</string>
    <string name="start_record_fail">启动录像失败</string>
    <string name="stop_record_success">停止录像成功</string>
    <string name="start_Talk_success">开启语音对讲成功</string>
    <string name="no_Talk_channels">该设备无可对讲通道</string>
    <string name="select_channel">请选择通道号</string>
    <string name="analog_channel">对讲通道%d</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="start_Talk_fail">开启语音对讲失败</string>
    <string name="stop_Talk">关闭语音对讲</string>
</resources>






