<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8F8F8"
    tools:context="com.ivms.ivms8700.view.SetingActivity">
    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_gravity="center"
        layout="@layout/head_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp64"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:background="#FFFFFF">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp14"
            android:text="@string/adress"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/dp18"
            android:layout_marginLeft="@dimen/dp10"
            android:hint="@string/daress_hint"
            android:background="@null"/>

    </LinearLayout>
    <View
      android:layout_width="match_parent"
      android:layout_height="0.2dp"
      android:layout_marginLeft="@dimen/dp20"
      android:layout_marginRight="@dimen/dp20"
      android:background="#D8D8D8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp64"
        android:orientation="horizontal"
        android:background="#FFFFFF">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp14"
            android:text="@string/port"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/dp18"
            android:layout_marginLeft="@dimen/dp10"
            android:hint="@string/port_hint"
            android:background="@null"/>

    </LinearLayout>

</LinearLayout>
