<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.LoginActivity">
       <ImageView
           android:layout_width="@dimen/dp103"
           android:layout_height="@dimen/dp104"
           android:layout_marginTop="@dimen/dp152"
           android:background="@drawable/logo" />
        <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/dp328"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp80"
            android:hint="@string/login_name_hint"
            android:background="@null"
            android:drawablePadding="@dimen/dp10"
            android:drawableLeft="@drawable/yonghuming"
            />
        <View
            android:layout_width="@dimen/dp328"
            android:layout_height="0.2dp"
            android:background="#0093FD"></View>
        <EditText
            android:id="@+id/pwd"
            android:layout_width="@dimen/dp328"
            android:layout_height="@dimen/dp50"
            android:hint="@string/login_pwd_hint"
            android:background="@null"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/dp10"
            android:drawableLeft="@drawable/mima"
            />
        <View
            android:layout_width="@dimen/dp328"
            android:layout_height="0.2dp"
            android:background="#0093FD"></View>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/dp328"
            android:layout_height="@dimen/dp48"
            android:background="@drawable/denglu"
            android:textColor="#ffffff"
            android:layout_marginTop="@dimen/dp36"
            android:textSize="@dimen/dp24"
            android:text="@string/login_btn"/>

        <TextView
            android:id="@+id/set_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp19"
            android:textColor="#BBBBBB"
            android:gravity="center"
            android:drawableRight="@drawable/arrow"
            android:layout_marginTop="16dp"
            android:drawablePadding="@dimen/dp4"
            android:text="@string/seting_btn"/>
</LinearLayout>