<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rltitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:background="#0093FD">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dp20" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/titlechoose"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_below="@+id/rltitle"
        android:background="#0093FD"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llSafetyHat"
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_safety_hat"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dp18" />

            <View
                android:id="@+id/live_view"
                android:layout_width="@dimen/dp28"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/dp2"
                android:background="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFace"
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_face"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dp18" />

            <View
                android:id="@+id/local_view"
                android:layout_width="@dimen/dp28"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/dp2"
                android:background="#FFFFFF"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      android:layout_below="@id/titlechoose"
      >
      <TextView
          android:id="@+id/tvTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp4"
          android:layout_marginLeft="@dimen/dp14"
          android:textStyle="bold"
          android:text="@string/sb_list"/>
      <android.support.v7.widget.RecyclerView
          android:id="@+id/RvMessage"
          android:layout_width="match_parent"
          android:layout_below="@+id/tvTitle"
          android:layout_height="match_parent"
          android:layout_marginRight="@dimen/dp2"
          android:layout_marginLeft="@dimen/dp2"
          android:layout_marginTop="@dimen/dp4">

      </android.support.v7.widget.RecyclerView>

  </RelativeLayout>

</RelativeLayout>
